// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Composite: Pagination renders with defaultProps 1`] = `
<div
  className="ax-inline-group ax-button-group ax-space--x6 ax-text--align-center"
>
  <div
    className="ax-inline-group__spacer"
  >
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="108487691436"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-left"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M11 4L9.5 2.5 4 8l5.5 5.5L11 12 7 8z\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
    <button
      className="ax-button ax-button--accent ax-button--primary ax-button--circle-small"
      onClick={[Function]}
    >
      1
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      2
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      3
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      4
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      5
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      6
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      onClick={[Function]}
    >
      7
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--ellipsis"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M8 10a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm-5 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm10 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4z\\" fill-rule=\\"evenodd\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="fdb0ab990230"
      onClick={[Function]}
    >
      10
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="e43741906502"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-right"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M5 12l1.5 1.5L12 8 6.5 2.5 5 4l4 4z\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
  </div>
</div>
`;

exports[`Composite: Pagination renders without displayRange 1`] = `
<div
  className="ax-inline-group ax-button-group ax-space--x6 ax-text--align-center"
>
  <div
    className="ax-inline-group__spacer"
  >
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="108487691436"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-left"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M11 4L9.5 2.5 4 8l5.5 5.5L11 12 7 8z\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="e43741906502"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-right"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M5 12l1.5 1.5L12 8 6.5 2.5 5 4l4 4z\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
  </div>
</div>
`;

exports[`Composite: Pagination renders without pages 1`] = `
<div
  className="ax-inline-group ax-button-group ax-space--x6 ax-text--align-center"
>
  <div
    className="ax-inline-group__spacer"
  >
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="108487691436"
      disabled={true}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-left"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M11 4L9.5 2.5 4 8l5.5 5.5L11 12 7 8z\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
    <button
      className="ax-button ax-button--accent ax-button--quaternary ax-button--circle-small"
      data-ax-at="e43741906502"
      disabled={false}
      onClick={[Function]}
    >
      <svg
        className="ax-icon ax-icon--chevron-right"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M5 12l1.5 1.5L12 8 6.5 2.5 5 4l4 4z\\"/>",
          }
        }
        style={
          Object {
            "height": "1rem",
            "width": "1rem",
          }
        }
        viewBox="0 0 16 16"
      />
    </button>
  </div>
</div>
`;
